# project

./: README.md
smart_home/: sdkconfig  sdkconfig.old
smart_home/main/: CMakeLists.txt  smart_home.c
smart_home_v2-pc/: CMakeLists.txt  sdkconfig  sdkconfig.old
smart_home_v2-pc/certs/: server.crt  server.key
smart_home_v2-pc/main/: CMakeLists.txt  smart_home.c
